--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.3.3",
     "sequelize": "^6.31.1",
-    "yargs": "^17.7.2"
+    "yargs": "^17.7.2",
+    "swagger-jsdoc": "^6.1.0",
+    "swagger-ui-express": "^4.3.0"
   }
 }
